--- a/html/Box/含mui的html.html
+++ b/html/Box/含mui的html.html
@@ -43,7 +43,10 @@
 
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript">
-			mui.init()
+			mui.init();
+			
+			
+			
 		</script>
 	</body>
 
