--- a/html/Common/Browser.html
+++ b/html/Common/Browser.html
@@ -33,7 +33,7 @@
 			
 			mui.plusReady(function(){
 				w = plus.webview.currentWebview();
-				url = w.url || 'http://www.szbdedu.com/';
+				url = w.url || 'http://www.baidu.com/';
 				c = mui.openWindow(url,url,{
 					styles:{
 						top:'46px',
