--- a/html/Home.html
+++ b/html/Home.html
@@ -59,7 +59,7 @@
 			<a class="mui-tab-item  app-color-white _3" id='Music/Room.html'>
 				<span class="mui-icon iconfont icon-yinle"></span>
 			</a>
-			<a class="mui-tab-item app-color-white _4" id='My/My.html'>
+			<a class="mui-tab-item app-color-white _4" id='Live/Room.html'>
 				<span class="mui-icon iconfont icon-iconfuzhi"></span>
 			</a>
 		</nav>
@@ -69,7 +69,7 @@
 		<script>
 			var ws,
 				activeTab = '',
-				subpages = ['Qa/Room.html', 'html/Service.html', 'html/reg.html', 'html/Center.html', 'list.html'],
+				subpages = ['Qa/Room.html'],
 				subpage_style = {
 					top: '0px',
 					bottom: '51px',
