新增 安卓双击返回桌面

--- a/html/Home.html
+++ b/html/Home.html
@@ -66,6 +66,7 @@
 
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/App/App.js"></script>
+		<script src="../js/Common/androidBack.js" ></script>
 		<script>
 			var ws,
 				activeTab = '',
